--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,10 +1,24 @@
-page-tutorial { .toolbar-background {
-    background: rgb(75, 144, 200);
-    border-color: palegoldenrod;
+page-tutorial { 
+  
+  .image-background{
+       
+    position: fixed;
+   //z-index: -1;
+  //background-image: linear-gradient(#f33464,#3f33ec);
+      
+ }
+
+  
+  .toolbar-background {
+    background-color: rgba(0, 0, 0, 0);
+        color: white; 
   }
   
-  
+ 
+
+
   .slide-zoom {
+    
     height: 100%;
    
   }
