--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -30,12 +30,19 @@ page-signup {
         background-color: rgba(0, 0, 0, 0);
         color: white; 
     }
+    .item.item-trns4 {
+       
+        background-color: rgba(0, 0, 0, 0);
+        color: white; }
+
+    .item.item-trns5 {
+        
+     background-color: rgba(0, 0, 0, 0);
+       color: white; }
+
     .reg{
         margin-top: 40%;
         margin-bottom: 5vh;
     }
 
-}
-
-
-
+    }
