--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -15,13 +15,12 @@ page-tutorial {
   }
   
  
-
-
-  .slide-zoom {
-    
-    height: 100%;
-   
+  .slide{
+            margin-top: 10%;
+            margin-bottom: 5vh;
   }
+
+  
 
   .slide-title {
     margin-top: 2.8rem;
@@ -53,6 +52,11 @@ page-tutorial {
 
   
   }
+
+
+
+
+  
 
 
 }
