--- a/src/pages/signin/signin.scss
+++ b/src/pages/signin/signin.scss
@@ -1,3 +1,36 @@
 page-signin {
+    
+    .logo{
+        margin-top: 30%;
+    }
+    .item.item-trns {
+        
+        background-color: rgba(0, 0, 0, 0);
+        color: white; 
+    }
+    .item.item-trns2 {
+        
+        background-color: rgba(0, 0, 0, 0);
+        color: white; 
+    }
+    .image-background{
+       
+        position: fixed;
+        //z-index: -1;
+      //background-image: linear-gradient(#f33464,#3f33ec);
+          
+     }
+    .Blogin{
+        margin-top: 5%;
+        
+
+    }
+    .Bsignup{
+        margin-top: 5%;
+
+    }
+
+
+
 
 }
