--- a/src/pages/signup/signup.scss
+++ b/src/pages/signup/signup.scss
@@ -9,9 +9,9 @@ page-signup {
         margin-bottom: 5vh;
     }
     .image-background{
-       
-       position: fixed;
-       //z-index: -1;
+        background-size: cover;
+      
+        position: fixed;
      //background-image: linear-gradient(#f33464,#3f33ec);
          
     }
