--- a/src/pages/user-products-list/user-products-list.scss
+++ b/src/pages/user-products-list/user-products-list.scss
@@ -1,3 +1,31 @@
 page-user-products-list {
+    .card-produto {
+    
+       
+        .card-title {
+      
+          
+            font-size: 1.5em;
+            width: 100%;
+            font-weight: bold;
+            color: #21ade1;
+         }
+         
+          .card-discricao {
+            font-size: 1.0em;
+            
+          
+            width: 100%;
+            color:#21ade1;
+          }
+          .card-preco {
+             font-size: 1.5em;
+            
+             
+             width: 100%;
+             color:#21ade1;
+           }
+    
+}
 
 }
