--- a/src/pages/user-profile/user-profile.scss
+++ b/src/pages/user-profile/user-profile.scss
@@ -1,3 +1,11 @@
 page-user-profile {
 
+
+    .toolbar-background {
+        //background: #21ade1;
+                border-color: palegoldenrod;
+                background: #e1213b;        
+               // background-image: linear-gradient(#21ade1, #24b9f0, #26c5ff );
+              }
+
 }
