--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,24 @@
-<ion-menu [content]="content">
+<ion-menu side="left" id="authenticated" [content]="content" class="menu">
   <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
+    <ion-toolbar >
+      <ion-grid>
+        <ion-row>
+          <ion-col col-4>
+              <div class="user-avatar">
+                <img src="../assets/img/Vestidos.jpg">
+              </div>
+          </ion-col>
+          
+          <ion-col padding-top col-8>
+            <h2 ion-text class="no-margin text-white">
+              {{userName}}
+            </h2>
+            <span ion-text color="light">{{userName}}</span>
+          </ion-col>
+            
+        
+        </ion-row>
+      </ion-grid>
     </ion-toolbar>
   </ion-header>
 
@@ -31,5 +48,45 @@
 
 </ion-menu>
 
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<div *ngIf="showSplash" class="splash">
+    <div class="sk-cube-grid">
+      <div class="sk-cube sk-cube1">
+        <img src="assets/img/q1.png">
+      </div>
+  
+      <div class="sk-cube sk-cube2">
+        <img src="assets/img/q2.png">
+      </div>
+  
+      <div class="sk-cube sk-cube3">
+        <img src="assets/img/q3.png">
+      </div>
+  
+      <div class="sk-cube sk-cube4">
+        <img src="assets/img/q6.png">
+      </div>
+  
+      <div class="sk-cube sk-cube5">
+        <img src="assets/img/q5.png">
+      </div>
+  
+      <div class="sk-cube sk-cube6">
+        <img src="assets/img/q4.png">
+      </div>
+  
+      <div class="sk-cube sk-cube7">
+        <img src="assets/img/q7.png">
+      </div>
+  
+      <div class="sk-cube sk-cube8">
+        <img src="assets/img/q8.png">
+      </div>
+  
+      <div class="sk-cube sk-cube9">
+        <img src="assets/img/q9.png">
+      </div>
+    </div>
+  </div>
+  
+  
+  <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
