--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -1,3 +1,12 @@
 page-category {
-
+	.heart{
+		margin-left: 14px;
+	
+    }
+    .home{
+        margin-left: 50px;
+    }
+    .profile{
+        margin-left: 50px;
+    }
 }
