--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -41,7 +41,10 @@ $colors: (
   dark:       #222,
   peach:      #fdc29e,
   peixe:      #ffd1a0,
-  blue1:      #22aee2
+  blue1:      #2fb6ed,
+  blue2:      #1fdadf,
+  red1:       #e1213b,
+  red2:       #df1f1f
 );
 
 
