--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,24 +1,26 @@
-<ion-menu side="left" id="authenticated" [content]="content" class="menu">
+<ion-menu>
   <ion-header>
     <ion-toolbar >
-      <ion-grid>
-        <ion-row>
-          <ion-col col-4>
-              <div class="user-avatar">
-                <img src="../assets/img/Vestidos.jpg">
-              </div>
-          </ion-col>
-          
-          <ion-col padding-top col-8>
-            <h2 ion-text class="no-margin text-white">
-              {{userName}}
-            </h2>
-            <span ion-text color="light">{{userName}}</span>
-          </ion-col>
+      <article>
+        <div class="menu">
+          <input id="menu--toggle"
+                 type="checkbox" />
+          <!-- /#menu--toggle -->
+          <label class="menu--toggle__trigger"
+                 for="menu--toggle"></label>
+          <!-- /.menu--toggle__trigger -->
+          <label class="menu--toggle__burger"
+                 for="menu--toggle"></label>
+          <!-- /.menu--toggle__burger -->
+    
+    
+          <ul class="menu__body">
             
-        
-        </ion-row>
-      </ion-grid>
+          </ul>
+          <!-- /.menu__body -->
+        </div>
+        <!-- /.menu -->
+    </article>
     </ion-toolbar>
   </ion-header>
 
@@ -87,6 +89,7 @@
       </div>
     </div>
   </div>
+  
   
   
   <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
