--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -1,6 +1,92 @@
 page-tutorial { 
-  $pink: #FF8FDE;
-  $blue: #618BFF;
+ 
+
+  // ============================================= ANIMAÇÃO DA NUVEM ==================================
+  // Storyboard Timeline
+  $timeline: (
+   '0'         : 0s,
+   '1'      : 0.4s,
+   '2'        : 0.4s,
+   '3'      : 1.8s,
+   '4'      : 0.4s,
+   '5'      : 1s,
+   '6'      : 0.1s,
+   '7'           : 0.4s
+  );
+  
+  
+  // $totaltime:                      Total of all timecodes in $timeline
+  // $timelineAccumulated:    Accumulated timeline map based on $timeline
+  $totaltime: 0s;
+  $timelineAccumulated: ();
+  @each $key, $time in $timeline {
+      $totaltime: $totaltime + $time;
+      $timelineAccumulated: map-merge($timelineAccumulated, ($key : $totaltime) );
+  }
+  
+  // Timecode to Percent function
+  // Params:
+  //  $key:           key/position in timeline
+  //  $offset:    optional offset to add to time from timeline (use negative number to subtract)
+  // Return:      Percentage value of keyposition in timeline.
+  @function tp($key, $offset: 0s) {
+      @return (map-get($timelineAccumulated, $key) + $offset) / $totaltime * 100%;
+  }
+  
+  @keyframes cloud {
+      0% {
+          left: 280px;
+      }
+      100% {
+          left: -140px;
+      }
+  }
+  
+  
+    
+      .cloud {
+          margin-top: 50%;
+          position: absolute;
+          width: 70px;
+          height: 24px;
+          background: linear-gradient(to bottom,
+                                  rgba(242,249,254,1) 5%,
+                                  rgba(214,240,253,1) 100%);
+          border-radius: 20px;
+          top:-20px;
+          z-index: -1;
+          animation: cloud $totaltime*2 linear infinite;
+          &.small {
+              top:-50px;
+              transform: scale(.6);
+              animation-delay: -$totaltime/3;
+              animation-duration: $totaltime*3;
+          }
+          &:before, &:after {
+              position: absolute;
+              content: "";
+              background: inherit;
+              z-index: -1;
+          }
+          &:before {
+              width: 36px;
+              height: 36px;
+              top: -18px;
+              right: 10px;
+              border-radius: 40px;
+          }
+          &:after {
+              width: 20px;
+              height: 20px;
+              top: -10px;
+              left: 10px;
+              border-radius: 20px;
+          }
+      }
+
+// ============================================= FIM ANIMAÇÃO DA NUVEM ==================================
+
+
 
 
 
@@ -20,7 +106,7 @@ page-tutorial {
   
  
   .slide{
-    margin-top: 0vh;
+    margin-top: 0;
     
     z-index: 999;
     background: transparent;
@@ -68,7 +154,32 @@ page-tutorial {
   
 }
 
+// ================= ANIMAÇÃO DO FUNDO ====================
+.animatedBackground {
+ z-index: 1;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  background: url("../../assets/img/TF.png");
+  background-repeat: repeat;
+  background-position: 0 0;
+  background-size: auto 100%;
+/*adjust s value for speed*/
+  animation: animatedBackground 100s linear infinite;
+}
 
+@keyframes animatedBackground {
+  from {
+    background-position: 0 0;
+  }
+/*use negative width if you want it to flow right to left else and positive for left to right*/
+  to {
+    background-position: -10000px 0;
+  }
+}
+//=============================== FIM DA ANIMAÇÃO DO FUNDO =======================
 
 
 
