--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <ion-menu side="left" id="authenticated" [content]="content" class="menu">
   <ion-header>
     <ion-toolbar >
+        <div class="flake2"></div>
+        <div class="flake3"></div>
       <ion-grid>
         <ion-row>
           <ion-col col-4>
