--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -109,4 +109,78 @@ $red2:       #e1213b;
     
   }
 
+  //=============================== Animação NEVE ==================================
+
+.flake2,
+.flake3 {
+  z-index: 1;
+  background: url("../../assets/img/flocos.png");
+  background-repeat: repeat;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: fall1 30s infinite linear;
+          animation: fall1 30s infinite linear;
+  background-size: 250px;
+  -webkit-filter: blur(1px);
+          filter: blur(1px);
+}
+
+.flake2 {
+  -webkit-animation: fall2 30s infinite linear;
+          animation: fall2 30s infinite linear;
+  background-size: 300px;
+  -webkit-filter: blur(1.6px);
+          filter: blur(1.6px);
+}
+
+.flake3 {
+  background-size: 450px;
+  -webkit-animation: fall3 30s infinite linear;
+          animation: fall3 30s infinite linear;
+  -webkit-filter: blur(1.9px);
+          filter: blur(1.9px);
+}
+
+
+
+
+@-webkit-keyframes fall2 {
+  0% {
+    background-position: 0px -400px;
+  }
+  100% {
+    background-position: -180px 1200px;
+  }
+}
+
+@keyframes fall2 {
+  0% {
+    background-position: 0px -400px;
+  }
+  100% {
+    background-position: -180px 1200px;
+  }
+}
+
+@-webkit-keyframes fall3 {
+  0% {
+    background-position: 0px 200px;
+  }
+  100% {
+    background-position: 400px 2000px;
+  }
+}
+
+@keyframes fall3 {
+  0% {
+    background-position: 0px 200px;
+  }
+  100% {
+    background-position: 400px 2000px;
+  }
+
+}
 
