--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -160,7 +160,7 @@ page-tutorial {
   position: relative;
   top: 0;
   left: 0;
-  background: url("../../assets/img/TF2.png");
+  background: url("../assets/img/TF2.png");
   background-repeat: repeat;
   background-position: 0 0;
   background-size: auto 100%;
