--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,7 +4,12 @@ $red2:       #e1213b;
   $blue2:      #1fdadf;
 
  
- 
+ .lista{
+  font-family: 'FORMA';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/forma/Signika-Semibold.ttf');
+ }
 
 .toolbar-background {
 	//background: #21ade1;
