--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,7 +24,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content>
+  <ion-content class="lista">
       <ion-list>
         <ion-item *ngFor="let p of pages; let i=index" text-wrap (click)="toggleLevel1('idx'+i)" [ngClass]="{active: isLevel1Shown('idx'+i)}">
           <h4>
