--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -107,6 +107,6 @@ body{
   font-weight: 400 !important;
 }
 
-h1, h2, button, p, title{
+h1, h2, button, p, title, strong, b{
   font-family: "FORMA" !important;
 }
