--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,7 +15,7 @@
             <p>Margarida</p>
           </label>
           <div class="perfil">
-          <button ion-button clear menuClose color="light" *ngFor="let p of hiddenPages" (click)="openPage(p.component)">
+            <button ion-button clear menuClose color="light" *ngFor="let p of hiddenPages" (click)="openPage(p.component)">
               Minha conta
             </button>
           </div>
@@ -36,15 +36,19 @@
         Tutorial
       </button>
 
-      <ion-item *ngFor="let p of pages; let i=index" (click)="toggleLevel1('idx'+i)" [ngClass]="{active: isLevel1Shown('idx'+i)}">
+      <ion-item *ngFor="let p of categories; let i=index" (click)="toggleLevel1('idx'+i)" [ngClass]="{active: isLevel1Shown('idx'+i)}">
         <h2>
           {{p.category}}
           <ion-icon color="success" [name]="isLevel1Shown('idx'+i) ? 'arrow-dropdown' : 'arrow-dropright'"></ion-icon>
         </h2>
         <div *ngIf="isLevel1Shown('idx'+i)">
-          <button menuClose ion-item *ngFor="let s of p.subs; let i2=index" (click)="toggleLevel2('idx'+i+'idx'+i2); openCategoryPage(p.category,s.subcategory)"
+          <button menuClose ion-item (click)="toggleLevel2('idx'+i+'idx'+i2); openCategoryPage(p.category)"
             [ngClass]="{active: isLevel2Shown('idx'+i+'idx'+i2)}">
-            {{s.subcategory}}
+            Todos: {{p.category}}
+          </button>
+          <button menuClose ion-item *ngFor="let s of p.subcategories; let i2=index" (click)="toggleLevel2('idx'+i+'idx'+i2); openCategoryPage(p.category,s)"
+            [ngClass]="{active: isLevel2Shown('idx'+i+'idx'+i2)}">
+            {{s}}
           </button>
         </div>
       </ion-item>
@@ -52,9 +56,9 @@
       <button menuClose ion-item text-center *ngIf="!showUserTabInMenu" (click)="goToSigninPage()">
         Entrar
       </button>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p.component)">
+      <!-- <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p.component)">
         {{p.title}}
-      </button>
+      </button> -->
 
     </ion-list>
   </ion-content>
